--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,37 +1,68 @@
-name: GitHub Action flow to Docker hub 
+name: CI
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
-  build-push-images:
-    name: Budowa i publikacja obrazw na repozytorium
+  build:
+    name: Laboratorium 7
     runs-on: ubuntu-latest
 
     steps:
-
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
+      # Skonfigurowanie dockera + buildx
       - name: Buildx set-up
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
+      # Instalacja QEMU
+      - name: Docker Setup QEMU
+        uses: docker/setup-qemu-action@v2
+
+      # Konfiguracja cachowania
+      - name: Cache Docker layers
+        uses: actions/cache@v2
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+      # Logowanie do Dockerhuba
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{secrets.DOCKER_HUB_USERNAME}}
+          password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
 
-
+      # Zbudowanie i wypchniecie obrazu na Dockerhuba
       - name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
-          context: ./
-          file: ./dockerfile.v1
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+          # -------------------------------------------------------------------------------------
+          # builder supported OS/ARCH:
+          # linux/amd64, linux/arm64, linux/riscv64, linux/ppc64le, linux/s390x,
+          # linux/386, linux/mips64le, linux/mips64, linux/arm/v7, linux/arm/v6
+          # ----------------------------------
+          # node:alpine supported OS/ARCH:
+          # linux/amd64, linux/arm/v6, linux/arm/v7, linux/arm64/v8, linux/ppc64le, linux/s390x
+          # -------------------------------------------------------------------------------------
+          # BEFORE
+          # platforms: linux/arm/v7,linux/arm64/v8,linux/amd64
+          # not good, too long time to build: linux/arm/v6, linux/arm/v7,
+          platforms: linux/amd64,linux/arm64/v8,linux/ppc64le,linux/s390x
+          context: .
+          file: Dockerfile
           push: true
           tags: |
-            czopekszymon/lab6
-          
+            ${{secrets.DOCKER_HUB_USERNAME}}/lab6:latest
+      # Przenies cache'a
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
